# MediaFusion

./: .dockerignore  .gitignore  .gitlab-ci.yml  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  addons.xml  addons.xml.md5  alembic.ini  api_test.http  beamup.json  config.py  database.py  index.html  main.py  manifest.json  mkdocs.yml  models.py  package-lock.json  pyproject.toml  schemas.py  scrap.py  scrapy.cfg  sitemap.xml  utils.py
backend/: Cargo.toml  clippy.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-0cd3b938adeb9a29b5831031d915dda5650c4d1d5b8d02b607ee589f57a5ecd6.json  query-13f4692a45854a9573afa59b151622b935c6adf750052a7e32a4dce7e2ecb474.json  query-16fe9264ff20d423a6ece11e3dbb1d991ed2b954f2ef5174fb9735d1dce7a234.json  query-1c5ac62941730da2387afe8b702545869473350efe0a70438e1473b84aab34e1.json  query-267396662c643a40a037b8b73613f1453475c1bbd05149f23060cccb8675df2a.json  query-2c9ddad5ef53a0cd1137fcc4594e940fb0b4579439e9845bfc8e83a56745c287.json  query-2f2f3619dc74f8d88513d933670f9396b89368db0c84b582fd99b81636b3672d.json  query-34d7ba8731b131346d6658c96c0e78a35312a356610c785c5722cfc4404015e9.json  query-37e3087bfdfc2db0dffd8aeba90da8bcddccec46fb0193d7f2cad7a39cdd3324.json  query-48518aad71ec7a14950e292ff3607c495dbd9c9a346280b51f93e71ec72b24a4.json  query-62bb2556dd3be27e964437a2b43cbbfcba3e15ecf1c0566b5e46568fb225217c.json  query-63edc6eea59257ba7dc673535620119e2dd9ed907aafdbe9167c2fe745d23b5f.json  query-64aad3eaa0baa00250795e369a4900d5bffefb0aa4f50b792fd037716c5d18fd.json  query-67c680eb14e75305dc653f81aab3e249382ee994064ec109ebb26c5a68d003ca.json  query-75fbafeb732e3b9164096d6ffb76413a7ba8eb215e5428e16e18f84734fa853a.json  query-7af01dcf5f0b7b24c9e1cd09b656c536cc5f82b8e7ef136f9f9389dabd92aa37.json  query-8eba896a6375cd08b0aa8003802bab41c1a957d20c0a4851f7a2f84b0e8f67d3.json  query-98454803fda8527a4766513b3ba435eef3e5b120c2634c84f085373e4edd5c27.json  query-a7a473528ad238f4eadd2b57f6d9da476fa8511b211d68b589b58efc07440498.json  query-ada522190bdae9a072ad8f42a9170ea9c96e1bbbb4af82ac768f02edc2efd995.json  query-b6c22de6ab80789d9a6f97c235f72a10caecab5308cbb796fecea32cdd834724.json  query-bfeba41f42603de5f457b506c2ca99d54013e934f727b12a9defacd955822e68.json  query-c4028db166a2896875b175e9a827aaf288669dc31860d216b0afe2a186f65313.json  query-d6f0eb330ad588036c0f8fd61e83e6025d307ff4c63824ad12cf216602554829.json  query-d9719be13b0401c0d86413877c909d4a3f1d36c4e855686f7ed5b202cb26de1d.json
backend/benches/: stream_warm.rs
backend/migrations/: 0001_baseline.down.sql  0001_baseline.up.sql  0002_add_stream_name_trgm_index.down.sql  0002_add_stream_name_trgm_index.up.sql  0003_add_media_id_indexes.down.sql  0003_add_media_id_indexes.up.sql  0004_optimize_annotation_queue.up.sql  0005_job_queue_tables.down.sql  0005_job_queue_tables.up.sql  0006_keyword_filters.down.sql  0006_keyword_filters.up.sql  0007_keyword_sync.down.sql  0007_keyword_sync.up.sql  0008_genres_query_index.down.sql  0008_genres_query_index.up.sql  0009_user_profiles_created_at_default.down.sql  0009_user_profiles_created_at_default.up.sql  0010_stream_suggestions_field_name.down.sql  0010_stream_suggestions_field_name.up.sql  0011_imdb_dataset_import.down.sql  0011_imdb_dataset_import.up.sql  0012_imdb_scheduler_config.down.sql  0012_imdb_scheduler_config.up.sql  0013_remove_internal_mediafusion_external_ids.down.sql  0013_remove_internal_mediafusion_external_ids.up.sql  0014_pg_stat_statements.down.sql  0014_pg_stat_statements.up.sql  0015_scheduler_parity_jobs.down.sql  0015_scheduler_parity_jobs.up.sql  0016_perf_hot_and_missing_indexes.down.sql  0016_perf_hot_and_missing_indexes.up.sql  0017_genre_media_type.down.sql  0017_genre_media_type.up.sql  0018_media_external_id_created_at_default.down.sql  0018_media_external_id_created_at_default.up.sql  0019_drop_stream_media_link_filename.down.sql  0019_drop_stream_media_link_filename.up.sql  0020_media_keyword_blocked.down.sql  0020_media_keyword_blocked.up.sql  0021_m3u_seed_data.down.sql  (+38 more)
backend/resources/: adult-keywords.txt  media-keywords-filters.txt  stream-keywords-filters.txt
backend/scripts/: optimize_keywords.py
backend/src/: api_error_middleware.rs  api_key_middleware.rs  config.rs  demagnetize.rs  error.rs  exception_tracker.rs  lib.rs  main.rs  metrics_middleware.rs  migrate.rs  rate_limit_middleware.rs  request_id_middleware.rs  state.rs  stremio_auth_middleware.rs  template.rs  usenet_compat.rs
backend/src/bot/: analyze.rs  api.rs  batch.rs  callback.rs  commands.rs  content_exists.rs  detect.rs  disabled_content.rs  dispatch.rs  forwarded.rs  import.rs  login.rs  matches.rs  metadata.rs  mod.rs  model.rs  notifications.rs  state_store.rs  text.rs  wizard.rs
backend/src/cache/: client.rs  codec.rs  mod.rs
backend/src/crypto/: decrypt.rs  mediaflow.rs  mod.rs  profile.rs
backend/src/db/: catalog.rs  contribution_defaults.rs  genres.rs  media.rs  meta.rs  metadata_merge.rs  metadata_model.rs  metadata_store.rs  metadata_suggestion_apply.rs  mod.rs  pool.rs  retry.rs  stream_backfill.rs  stream_links.rs  stream_model.rs  stream_store.rs  streams.rs  telegram.rs  telegram_channels.rs  torznab.rs  types.rs  users.rs  watch_history.rs
backend/src/jobs/: cancel_tokens.rs  enqueue.rs  error.rs  handler.rs  metrics.rs  mod.rs  registry.rs  runner.rs  scheduler.rs
backend/src/models/: stremio.rs  user_data.rs
backend/src/nsfw/: mod.rs
backend/src/parser/: constants.rs  episode_detector.rs  filter.rs  mod.rs  sort.rs  sports_parser.rs
backend/src/poster/: mod.rs  sports.rs
backend/src/providers/: file_selection.rs  mod.rs  validator.rs
backend/src/ptt/: adult-keywords.txt  clean.rs  engine.rs  handlers.rs  mod.rs
backend/src/routes/: admin.rs  admin_database.rs  admin_extended.rs  admin_genres.rs  admin_metrics.rs  (+37 more)
backend/tests/: contribution_review.rs  db_queries.rs  filter_and_sort_streams.rs  jobs_cleanup.rs  jobs_eztv_rss.rs  jobs_prowlarr_feed.rs  jobs_update_tv_posters.rs  jobs_validate_tv.rs  scraper_live_e2e.rs  stream_store.rs
services/api/: Cargo.toml
(+1822 files in other folders)
